# centauri

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DESCRIPTION.md  Dockerfile  LICENSE  README.md  ROADMAP.md  centauri-review-fdd989cc.md  go.mod  release.bat  render.yaml  review-diff.tmp  run-centauri.bat  ship.bat
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  claude.yml  dream.yml  release.yml  sync.yml
cmd/centauri/: format_test.go  main.go
docs/: CNAME  ai-features.md  audit-updated-capabilities.md  ceql.html  db-engines-submission.md  demo-tablespaces.md  deploy.md  design-own-your-data.md  design-segmentation.md  design-sync.md  design-tablespaces.md  design-vision.md  enterprise-deployment-gaps.md  enterprise-implementation-guide.md  enterprise-readiness.md  enterprise-review-rerun.md  how-it-works.html  index.html  install.sh  internals-vs-oracle.html  kb.json  llms.txt  local-ai.md  making-centauri-oracle-like.md  modeling-hierarchies.md  object-store-backend.md  oracle-like-recommendations-based-on-latest.md  oracle-like-recommendations-latest.md  performance.md  positioning.md  product-positioning-audit.md  production-suggestions.md  showcase.html  sql.md  vision-setup.md
installer/: centauri.iss
sdk/python/: README.md  TUTORIAL.md  pyproject.toml
sdk/python/centauri/: __init__.py  client.py  errors.py  server.py  transport.py  types.py
sdk/python/examples/: 01_hello_centauri.py  02_time_travel.py  03_pump_csv.py  04_watch_live.py  05_ai_context.py
sdk/python/tests/: mock_server.py  test_sdk.py
(+155 files in other folders)
